<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp"
        android:background="@color/primaryColor"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/regular"
            android:text="@string/text_card_caption"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:paddingVertical="@dimen/_16dp"
            android:layout_alignParentLeft="true"
            android:onClick="backclickCaption"
            android:src="@drawable/back" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/primaryColor"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_left"
            android:foreground="@drawable/ripple_16dp"
            android:drawableTint="@color/cardText1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:padding="@dimen/_5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border_1"
            android:text="@string/text_back"
            android:textColor="@color/cardText1" />

        <TextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="@drawable/ripple_16dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/cardText1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:padding="@dimen/_5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border_1"
            android:text="@string/text_next"
            android:textColor="@color/cardText1" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llOption"
        android:layout_above="@id/llCopyShare"
        android:background="@color/primaryColor"/>

    <LinearLayout
        android:id="@+id/llCopyShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adViewBanner"
        android:background="@color/primaryColor"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardText1"
            android:paddingHorizontal="15dp"
            android:text="@string/text_copy"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardText1"
            android:paddingHorizontal="15dp"
            android:text="@string/text_share"
            android:textColor="@color/white" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/adViewBanner"
        style="@style/BannerAdsView"/>
</RelativeLayout>