<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor"
            android:elevation="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerVertical="true"
                android:onClick="onClick"
                android:paddingVertical="@dimen/_16dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/text_qrGenerator"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_18"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/qrtype_spinner"
                android:singleLine="true"
                android:text="@string/text_qrCodeType"
                android:textSize="13sp" />

            <Spinner
                android:id="@+id/qrtype_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/black"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/flAdplaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/ic_native_bg_1"
            android:padding="@dimen/margin_5"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_value"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/border1"
            android:cursorVisible="true"
            android:gravity="top|left|center_vertical|center_horizontal|center|start"
            android:hint="@string/enterText"
            android:minLines="7"
            android:paddingStart="10dp"
            android:paddingTop="7dp"
            android:paddingEnd="10dp"
            android:paddingBottom="7dp"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/cardText1"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:id="@+id/iv_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:onClick="onClick"
                android:padding="5dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/iv_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/app_light_color"
                android:onClick="onClick"
                android:paddingLeft="30dp"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/generate"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adViewBanner"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/iv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_light_color"
            android:onClick="onClick"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/refresh"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adViewBanner"
        style="@style/BannerAdsView"/>
</RelativeLayout>
