<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:elevation="@dimen/_5dp"
        android:background="@color/primaryColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/regular"
            android:text="@string/text_text_repeater"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:onClick="backclickTextRepeater"
            android:paddingVertical="@dimen/textsize_16"
            android:src="@drawable/back" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="10dp"
        android:layout_above="@+id/adViewBanner"
        android:elevation="2dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/llButtons"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_enter_message"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTextMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_border_3"
                    android:hint="@string/text_enter_message"
                    android:paddingVertical="10dp"
                    android:paddingStart="5dp" />

                <FrameLayout
                    android:id="@+id/flAdplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_15"
                    android:background="@drawable/ic_native_bg_3"
                    android:padding="@dimen/margin_5"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_enter_repetition_limit"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etTextRepeateNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_border_3"
                        android:inputType="number"
                        android:paddingVertical="10dp"
                        android:paddingStart="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/border3"
                        android:padding="5dp"
                        android:text="@string/text_limit_note"
                        android:textColor="@color/red" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/border3"
                        android:orientation="horizontal"
                        android:paddingVertical="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/switchNewLine"
                            android:paddingStart="5dp"
                            android:text="@string/text_new_line_on"
                            android:textColor="@color/cardText3"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchNewLine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:paddingEnd="@dimen/margin_5"
                            android:textColorHint="@color/app_light_color" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/btnRepeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginStart="@dimen/margin_5"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardText3"
                        android:paddingHorizontal="@dimen/_10dp"
                        android:text="@string/text_repeat"
                        android:textColor="@color/white" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTextRepeates"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_border_3"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardText3"
                    android:paddingHorizontal="15dp"
                    android:text="@string/text_copy"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardText3"
                    android:paddingHorizontal="15dp"
                    android:text="@string/text_clear"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardText3"
                    android:paddingHorizontal="15dp"
                    android:text="@string/text_share"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:id="@+id/adViewBanner"
        style="@style/BannerAdsView"/>
</RelativeLayout>